# python_trainning

./: LICENSE  README.md
startup/: db.sqlite3  pyproject.toml
startup/reservation_app/: admin.py  models.py  urls.py  views.py
startup/reservation_app/migrations/: 0001_initial.py
startup/reservation_app/static/reservation_app/: login_styles.css  styles.css
startup/reservation_app/templates/: index.html  login.html  register.html  reservation_success.html  reserve.html  restaurant_creation_success.html  restaurant_pov.html  restaurant_register.html
startup/reservation_project/: asgi.py  settings.py  urls.py  wsgi.py
