[tool.poetry]
name = "reservation_app"
version = "0.1.0"
description = "This project aims to help people make a restaurant reservation."
authors = ["Paulo Araujo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
